--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "next": "15.5.4",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.55.3",
+    "framer-motion": "^12.23.5",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "viem": "^2.38.3",
+    "wagmi": "^2.15.6",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "typescript": "^5",
